# sekrets

./: .gitignore  README.rst  pyproject.toml
docs/: conf.py  index.rst
sekrets/: manage.py
tests/: test_sekrets.py
