[tool.poetry]
name = "sekrets"
version = "0.1.0"
description = ""
authors = ["Alexander Bausk <bauskas@gmail.com>"]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.18.0"
cryptography = "^3.4.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^4.0.3"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
